--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body{
     text-align: center;
     background-color: rgb(27, 27, 27);
     color: white;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 #imgprof{
@@ -26,7 +28,7 @@ body{
     border-radius: 40%;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
-    padding: 5%;
+    padding: 10%;
     margin-bottom: 10%;
 
 }
