--- a/style.css
+++ b/style.css
@@ -1,47 +1,73 @@
 body{
     text-align: center;
-    background-color: rgb(27, 27, 27);
+    background-color: #FF6A00;
     color: white;
-    margin-left: 10%;
-    margin-right: 10%;
 }
 
 #imgprof{
     width: 60%;
     text-align: center;
-    border: 10px solid rgb(205, 206, 204);
+    border: 5px solid #FF6A00;
     border-radius: 100%;
     
 }
-label,.p1,.p2,.p3{
+.p1,.p2,.p3{
     font: large;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 10%;
 }
 #p2{
     padding-bottom: 5%;
 }
 .section{
-    border-top: solid white 3px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-top: solid rgb(0, 0, 0) 3px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
-    border-radius: 40%;
+    border-radius: 30%;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     padding: 10%;
     margin-bottom: 10%;
 
 }
-.skills{
+.hskills{
     text-align: center;
     display: inline-block;
     margin-top:5%;
     margin-bottom: 5%;
-    padding: 1%;
-    background-color: rgb(172, 172, 172);
-    border-radius: 60%;
-    color: rgb(39, 39, 39);
+    padding: 4%;
+    background-color: #FF6A00;
+    border-radius: 0% 40% ;
+    color: rgb(255, 255, 255);
     font-size: 30px;
+    font-weight: normal;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.sskills{
+    text-align: center;
+    display: inline-block;
+    margin-top:5%;
+    margin-bottom: 5%;
+    padding: 7%;
+    background-color: #FF6A00;
+    border-radius: 0% 40% ;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.languages{
+    text-align: center;
+    display: block;
+    margin-top:5%;
+    margin-bottom: 5%;
+    padding: 4%;
+    background-color: #FF6A00;
+    border-radius: 60% ;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: normal;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .imgproj{
     border-radius: 10%;
@@ -55,32 +81,46 @@ label,.p1,.p2,.p3{
     display:inline-block;
     width: 50%;
 }
+#mail{
+    color: #FF6A00;
+}
 a{
-    color: grey
+    color: #FF6A00;
+    display: inline;
+}
+h4{
+    border-bottom: #FF6A00 solid 2px ;
+    border-radius: 100%;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     body {
         margin: 5%;
         font-size: 16px;
     }
 
     #imgprof {
+        margin-top: 5%;
         width: 80%;
         border-width: 5px;
     }
 
     .section {
         padding: 1%;
-        padding-bottom: 10%;
+        padding-bottom: 15%;
         font-size: 20px;
-        border-radius: 13%;
+        border-radius: 20%;
     }
 
-    .skills {
-        font-size: 18px;
-        padding: 2%;
-        margin: 2%;
+    .hskills {
+        font-size: 20px;
+        padding: 3%;
+        margin: 3%;
+    }
+    .sskills {
+        font-size: 20px;
+        padding: 1%;
+        margin: 3%;
     }
 
     .imgproj,.imgcertif {
@@ -89,16 +129,19 @@ a{
     }
 
     label,.p1, .p2, .p3 {
-        margin: 5%;
+        margin-top: 10%;
         font-size: 16px;
+    }
+    .languages{
+        border-radius: 50%;
     }
 
 
-    a {
+a {
         display: inline;
         word-wrap: break-word;
         font-size: 15px;
-    }
+}
 }
 
 
